Externalize build properties.
See #2471.